kubernetes/apps/main/dashy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashy
  namespace: dashy
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    lbipam.cilium.io/ips: "10.69.65.24"
spec:
  ingressClassName: cilium
  tls:
    - hosts:
        - dashy.lilstrudel.io
      secretName: dashy-tls
  rules:
    - host: dashy.lilstrudel.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dashy
                port:
                  number: 80
